<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium">

    <ImageView
        android:id="@+id/iv_search_result_image"
        android:layout_width="@dimen/video_width"
        android:layout_height="@dimen/video_height"
        android:src="@drawable/img_dummy_ted_talk_speakers"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/tv_search_result_video_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_duration"
        android:textColor="@color/white_text"
        android:background="@color/full_black"
        android:layout_alignRight="@id/iv_search_result_image"
        android:layout_alignBottom="@id/iv_search_result_image"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <TextView
        android:id="@+id/tv_search_result_speaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_speaker_name"
        android:drawableRight="@drawable/ic_more_vert_black_24dp"
        android:layout_toRightOf="@id/iv_search_result_image"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:textColor="@color/full_black"
        />

    <TextView
        android:id="@+id/tv_search_result_description"
        android:layout_width="@dimen/video_description"
        android:layout_height="wrap_content"
        android:text="@string/video_brief"
        android:layout_toRightOf="@id/iv_search_result_image"
        android:layout_below="@id/tv_search_result_speaker"
        android:layout_alignLeft="@id/tv_search_result_speaker"
        android:textColor="@color/full_black"
        android:textSize="@dimen/text_regular_2x"
        />
</RelativeLayout>