<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_talk_speaker"
    android:layout_width="@dimen/talk_playlist_width"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="@dimen/talk_playlist_width"
        android:layout_height="match_parent"
        android:background="@color/full_black">

        <ImageView
            android:id="@+id/iv_playlist"
            android:layout_width="@dimen/talk_playlist_width"
            android:layout_height="@dimen/talk_playlist_height"
            android:alpha="0.7"
            android:src="@drawable/img_dummy_talk_playlist"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/tv_playlist"
            android:layout_width="@dimen/talk_playlist_width"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_total_playlist"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/playlist_title"
            android:textColor="@color/white_text"
            android:textSize="@dimen/text_regular_2x"/>

        <TextView
            android:id="@+id/tv_total_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_playlist"
            android:layout_alignLeft="@id/tv_playlist"
            android:text="@string/number_of_playlist"
            android:textColor="@color/white_text" />


        <TextView
            android:id="@+id/tv_playlist_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_playlist"
            android:layout_alignRight="@id/iv_playlist"
            android:layout_alignTop="@id/tv_total_playlist"
            android:drawablePadding="@dimen/margin_xlarge"
            android:drawableRight="@drawable/ic_more_vert_white_24dp"
            android:text="@string/total_duration"
            android:textColor="@color/white_text" />


    </RelativeLayout>
</android.support.v7.widget.CardView>