<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_talk_speaker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_small"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_small"
    app:cardElevation="4dp">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_ted_talks_speakers"
            android:layout_width="match_parent"
            android:layout_height="@dimen/talks_image_size"
            android:scaleType="fitXY"
            android:src="@drawable/img_dummy_ted_talk_speakers" />

        <TextView
            android:id="@+id/tv_ted_talks_speaker_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_ted_talks_speaking_title"
            android:layout_marginLeft="@dimen/margin_medium"
            android:text="@string/speaker_name"
            android:textColor="@color/white_text" />

        <TextView
            android:id="@+id/tv_ted_talks_speaking_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_ted_talks_speakers"
            android:layout_alignLeft="@id/tv_ted_talks_speaker_name"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:text="@string/speaking_topic"
            android:textColor="@color/white_text"
            android:textSize="@dimen/text_regular_2x" />

        <TextView
            android:id="@+id/tv_talk_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_ted_talks_speaking_title"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_medium"
            android:drawablePadding="@dimen/margin_medium"
            android:drawableTop="@drawable/ic_more_vert_white_24dp"
            android:text="@string/speaking_duration"
            android:textColor="@color/white_text" />


    </RelativeLayout>
</android.support.v7.widget.CardView>